package com.example.grpcchat;

import com.example.grpcchat.service.ChatServiceImpl;
import io.grpc.Server;
import io.grpc.ServerBuilder;

import java.io.IOException;

public class ChatServer {
    private final int port;
    private final Server server;
    private final ChatServiceImpl chatService;

    public ChatServer(int port) {
        this.port = port;
        this.chatService = new ChatServiceImpl();
        this.server = ServerBuilder.forPort(port)
                .addService(chatService)
                .build();
    }

    public void start() throws IOException {
        server.start();
        System.out.println("üöÄ gRPC Chat Server –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É " + port);
        System.out.println("üì° –°–µ—Ä–≤–∏—Å—ã:");
        System.out.println("   - SendMessage (Unary)");
        System.out.println("   - ReceiveMessages (Server Streaming)");
        System.out.println("   - ChatStream (Bidirectional Streaming)");

        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
            System.out.println("*** –í—ã–∫–ª—é—á–µ–Ω–∏–µ —Å–µ—Ä–≤–µ—Ä–∞ ***");
            try {
                ChatServer.this.stop();
            } catch (InterruptedException e) {
                e.printStackTrace();
            }
            System.out.println("*** –°–µ—Ä–≤–µ—Ä –≤—ã–∫–ª—é—á–µ–Ω ***");
        }));
    }

    public void stop() throws InterruptedException {
        if (server != null) {
            server.shutdown().awaitTermination(30, java.util.concurrent.TimeUnit.SECONDS);
        }
    }

    public void blockUntilShutdown() throws InterruptedException {
        if (server != null) {
            server.awaitTermination();
        }
    }

    public static void main(String[] args) throws Exception {
        int port = 50051;
        ChatServer server = new ChatServer(port);
        server.start();
        server.blockUntilShutdown();
    }
}