package com.example.grpcchat.client;

import com.example.grpcchat.ChatMessage;
import com.example.grpcchat.MessageResponse;
import com.example.grpcchat.ConnectRequest;
import com.example.grpcchat.MessageType;
import com.example.grpcchat.ChatServiceGrpc;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.stub.StreamObserver;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.Scanner;
import java.util.UUID;
import java.util.concurrent.CountDownLatch;
import java.util.concurrent.TimeUnit;

public class ChatClient {
    private final ManagedChannel channel;
    private final ChatServiceGrpc.ChatServiceBlockingStub blockingStub;
    private final ChatServiceGrpc.ChatServiceStub asyncStub;
    private final String userId;
    private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");

    public ChatClient(String host, int port, String userId) {
        this.channel = ManagedChannelBuilder.forAddress(host, port)
                .usePlaintext()
                .build();
        this.blockingStub = ChatServiceGrpc.newBlockingStub(channel);
        this.asyncStub = ChatServiceGrpc.newStub(channel);
        this.userId = userId;
    }

    public void shutdown() throws InterruptedException {
        channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
    }

    // Unary –≤—ã–∑–æ–≤ - –æ—Ç–ø—Ä–∞–≤–∫–∞ —Å–æ–æ–±—â–µ–Ω–∏—è
    public void sendMessage(String text) {
        ChatMessage message = ChatMessage.newBuilder()
                .setId(UUID.randomUUID().toString())
                .setUserId(userId)
                .setText(text)
                .setTimestamp(LocalDateTime.now().format(formatter))
                .setType(MessageType.USER_MESSAGE)
                .build();

        MessageResponse response = blockingStub.sendMessage(message);
        System.out.println("‚úÖ –û—Ç–≤–µ—Ç —Å–µ—Ä–≤–µ—Ä–∞: " + response.getMessage());
    }

    // Server streaming - –ø–æ–ª—É—á–µ–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏–π
    public void receiveMessages() {
        ConnectRequest request = ConnectRequest.newBuilder()
                .setUserId(userId)
                .build();

        try {
            blockingStub.receiveMessages(request)
                    .forEachRemaining(message -> {
                        System.out.printf("üì® [%s] %s: %s\n",
                                message.getTimestamp(),
                                message.getUserId(),
                                message.getText());
                    });
        } catch (Exception e) {
            System.err.println("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —Å–æ–æ–±—â–µ–Ω–∏–π: " + e.getMessage());
        }
    }

    // Bidirectional streaming - –∏–Ω—Ç–µ—Ä–∞–∫—Ç–∏–≤–Ω—ã–π —á–∞—Ç
    public void startChat() throws InterruptedException {
        CountDownLatch finishLatch = new CountDownLatch(1);

        StreamObserver<ChatMessage> requestObserver =
                asyncStub.chatStream(new StreamObserver<ChatMessage>() {

                    @Override
                    public void onNext(ChatMessage message) {
                        System.out.printf("üí¨ [%s] %s: %s\n",
                                message.getTimestamp(),
                                message.getUserId(),
                                message.getText());
                    }

                    @Override
                    public void onError(Throwable t) {
                        System.err.println("–û—à–∏–±–∫–∞ –≤ —á–∞—Ç–µ: " + t.getMessage());
                        finishLatch.countDown();
                    }

                    @Override
                    public void onCompleted() {
                        System.out.println("–ß–∞—Ç –∑–∞–≤–µ—Ä—à–µ–Ω —Å–µ—Ä–≤–µ—Ä–æ–º");
                        finishLatch.countDown();
                    }
                });

        // –ß—Ç–µ–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏–π —Å –∫–æ–Ω—Å–æ–ª–∏
        try (Scanner scanner = new Scanner(System.in)) {

            while (scanner.hasNextLine()) {
                String text = scanner.nextLine().trim();
                if (text.isEmpty()) continue;

                ChatMessage message = ChatMessage.newBuilder()
                        .setId(UUID.randomUUID().toString())
                        .setUserId(userId)
                        .setText(text)
                        .setTimestamp(LocalDateTime.now().format(formatter))
                        .setType(MessageType.USER_MESSAGE)
                        .build();

                requestObserver.onNext(message);
            }
        } catch (Exception e) {
            requestObserver.onError(e);
        } finally {
            requestObserver.onCompleted();
        }

        finishLatch.await(1, TimeUnit.MINUTES);
    }

    public static void main(String[] args) throws Exception {
        String userId = args.length > 0 ? args[0] : "JavaClient-" + UUID.randomUUID().toString().substring(0, 8);
        ChatClient client = new ChatClient("localhost", 50051, userId);

        try {
            Scanner scanner = new Scanner(System.in);

            while (true) {
                System.out.println("\n=== gRPC Chat Client ===");
                System.out.println("1. –û—Ç–ø—Ä–∞–≤–∏—Ç—å —Å–æ–æ–±—â–µ–Ω–∏–µ (Unary)");
                System.out.println("2. –ü–æ–ª—É—á–∞—Ç—å —Å–æ–æ–±—â–µ–Ω–∏—è (Server Streaming)");
                System.out.println("3. –ò–Ω—Ç–µ—Ä–∞–∫—Ç–∏–≤–Ω—ã–π —á–∞—Ç (Bidirectional)");
                System.out.println("4. –í—ã—Ö–æ–¥");
                System.out.print("–í—ã–±–µ—Ä–∏—Ç–µ –æ–ø—Ü–∏—é: ");

                String choice = scanner.nextLine();

                switch (choice) {
                    case "1":
                        System.out.print("–í–≤–µ–¥–∏—Ç–µ —Å–æ–æ–±—â–µ–Ω–∏–µ: ");
                        String text = scanner.nextLine();
                        client.sendMessage(text);
                        break;
                    case "2":
                        System.out.println("–ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –ø–æ—Ç–æ–∫—É —Å–æ–æ–±—â–µ–Ω–∏–π...");
                        client.receiveMessages();
                        break;
                    case "3":
                        System.out.println("–ó–∞–ø—É—Å–∫ –∏–Ω—Ç–µ—Ä–∞–∫—Ç–∏–≤–Ω–æ–≥–æ —á–∞—Ç–∞...");
                        client.startChat();
                        break;
                    case "4":
                        System.out.println("–í—ã—Ö–æ–¥...");
                        client.shutdown();
                        return;
                    default:
                        System.out.println("–ù–µ–≤–µ—Ä–Ω–∞—è –æ–ø—Ü–∏—è");
                }
            }
        } finally {
            client.shutdown();
        }
    }
}
